[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2.0.4"
fluid-let = { version = "1.0.0", features = ["static-init"] }
aho-corasick = "1.1.2"
regex = "1.10.2"
itertools = "0.12.0"
colored = "2.1.0"
phf = { verison = "0.11.2", features = ["macros"] }
